2004-09-18  Bruno Haible  <bruno@clisp.org>

	* clos-genfun4.lisp (shared-initialize@generic-function,
	shared-initialize@standard-generic-function): Remove &allow-other-keys.
	* clos-specializer2.lisp (shared-initialize@eql-specializer): Likewise.
	* clos-class4.lisp (shared-initialize@class,
	shared-initialize@built-in-class, shared-initialize@structure-class,
	shared-initialize@standard-class,
	shared-initialize@funcallable-standard-class): Likewise.

2004-09-18  Bruno Haible  <bruno@clisp.org>

	* pathname.d (parse_as_logical): Fix incorrect comments.
	(LOGICAL-PATHNAME): Signal an error if the argument refers to a stream
	opened with a physical pathname.

2004-09-18  Bruno Haible  <bruno@clisp.org>

	Avoid floating-point overflow in comparison of floats with rational
	numbers.
	* sfloat.d (I_to_SF, RA_to_SF): Add signal_overflow argument.
	* ffloat.d (I_to_FF, RA_to_FF): Add signal_overflow argument.
	* dfloat.d (I_to_DF, RA_to_DF): Add signal_overflow argument.
	* lfloat.d (I_to_LF, RA_to_LF): Add signal_overflow argument.
	* realelem.d (I_F_float_F): Update.
	(RA_F_float_F): Add signal_overflow argument.
	(R_F_float_F, R_to_SF, R_to_FF, R_to_DF, R_to_LF,
	RA_F_exact_contagion_R, I_float_F, RA_float_F, RA_R_float_F,
	GEN_R_op21): Update.
	(R_R_comp): Avoid floating-point overflow when comparing float with
	rational number.
	* realtran.d (pi_F_float_F, ln2_F_float_F, R_R_log_R): Update.
	* compelem.d (N_durch_N, R_R_hypot_R): Update.
	* comptran.d (N_N_log_N, R_R_atanh_R_R): Update.
	* lisparit.d (read_float, to_double, log_digits): Update.

2004-09-21  Jörg Höhle  <hoehle@users.sourceforge.net>

	* foreign.d, foreign1.lisp, ffi.tst: Implement c-type
	'(c-pointer <c-type>) which does not convert data structures
	to/from Lisp and manipulates FOREIGN-VARIABLE objects instead.
	* modules/bindings/glibc/linux.lisp (errno): Use it.

2004-09-18  Bruno Haible  <bruno@clisp.org>

	* lispbibl.d (Class): Rename field valid_initargs to
	valid_initargs_from_slots.